# CSA_HW1

./: CMakeLists.txt  README.md  main.cpp
container/: container.cpp  container.h
flags_workwer/: flags_worker.h
functions/: additional_functions .h
objects/: bush.cpp  bush.h  flower.cpp  flower.h  plant.cpp  plant.h  tree.cpp  tree.h
